--- a/src/diagrams/universality.ejs
+++ b/src/diagrams/universality.ejs
@@ -118,9 +118,10 @@
     }
 </style>
 
+<d-figure id="figure-14">
 <figure>
     <% for (const network_name of ["AlexNet", "InceptionV3_slim", "ResnetV2_50_slim"]) {%>
-    <h5> <%= network_name %> </h5>
+    <h4> <%= network_name %> </h4>
     <div class="upstream-nmf">
         <div class="row">
             <div class="layer-label hidden"><label class="figcaption">layer</label></div>
@@ -149,8 +150,9 @@
             <% } %>
         </div>
     </div>
-    <figcaption><p>NMF of high-low frequency detectors in <a href="<%= units[network_name].layer_link %>"><%= units[network_name].layer %></a> with respect to <a href="<%= units[network_name].prev_layer_link %>"><%= units[network_name].prev_layer %></a>, with <span class="legend-label support">activations</span> and <span
+    <figcaption><p><a href="#figure-14" class="figure-number">14</a>: NMF of high-low frequency detectors in <a href="<%= units[network_name].layer_link %>"><%= units[network_name].layer %></a> with respect to <a href="<%= units[network_name].prev_layer_link %>"><%= units[network_name].prev_layer %></a>, with <span class="legend-label support">activations</span> and <span
     class="legend-label inhibit">inhibitions</span>.</p></figcaption>
     <br />
     <% } %>
 </figure>
+</d-figure>
