--- a/src/diagrams/upstream-nmf.ejs
+++ b/src/diagrams/upstream-nmf.ejs
@@ -87,6 +87,7 @@
     }
 </style>
 
+<d-figure id="figure-9">
 <figure>
     <div class="upstream-nmf">
 
@@ -119,7 +120,8 @@
         <% } %>
     </div>
     <figcaption>
-        <p>Using NMF factorization on the weights connecting six high-low frequency detectors in InceptionV1 to the two directly
+        <p><a href="#figure-9" class="figure-number">9</a>:
+          Using NMF factorization on the weights connecting six high-low frequency detectors in InceptionV1 to the two directly
             preceding convolutional layers, <code>conv2d2</code> and <code>conv2d1</code>.</p>
         <p>Their spatial arrangement is very clear, with LF factors <span class="legend-label support">activating
                 areas</span> in which high-low frequency detectors expect low frequencies, and <span
@@ -128,3 +130,4 @@
                 src="diagrams/2.1-upstream-nmf/pn-legend.png" /> and 1.</p>
     </figcaption>
 </figure>
+</d-figure>
