Small style fixes, mostly figure 1 and 3

--- a/src/diagrams/universality.ejs
+++ b/src/diagrams/universality.ejs
@@ -116,7 +116,7 @@
     .legend-label.inhibit {
         background-color: #0088EE88;
     }
-    d-figure {
+    #figure-14 {
       padding-bottom: 2rem;
     }
 </style>
