Various CSS resilience fixes and style cleanups

--- a/src/diagrams/similar-directions.ejs
+++ b/src/diagrams/similar-directions.ejs
@@ -11,7 +11,7 @@
     .columns .model {
         display: grid;
         position: relative;
-        grid-row-gap: 1em;
+        grid-row-gap: 0.5em;
         grid-auto-flow: row;
         align-content: start;
         grid-template-rows: min-content;
@@ -34,6 +34,10 @@
 
     .model figcaption>* {
         display: block;
+    }
+
+    .fv {
+        border-radius: 8px;
     }
 
     /*
