--- a/src/diagrams/upstream-neurons.ejs
+++ b/src/diagrams/upstream-neurons.ejs
@@ -14,8 +14,9 @@
     .upstream-neurons .row {
         display: grid;
         grid-template-columns: 1fr min-content 1fr min-content 1fr min-content 1fr min-content 1fr min-content 1fr min-content min-content;
-        grid-gap: .5em;
-        /* align-items: center; */
+        grid-column-gap: .5em;
+        column-gap: .5em;
+        align-items: center;
         /* justify-items: start; */
     }
 
@@ -28,8 +29,9 @@
     }
 
     img.fv {
+        display: block;
         max-width: 100%;
-        border-radius: 0.25rem;
+        border-radius: 8px;
     }
 
     img.full {
@@ -73,12 +75,12 @@
         font-size: 1.5em;
         font-weight: 200;
         color: #666;
-        margin-top: 0.3em;
+        margin-bottom: 0.2em;
     }
 
-    .equal-sign {
+    /* .equal-sign {
         padding: 0 0.5em;
-    }
+    } */
 
     .unit {
       display: block;
@@ -89,7 +91,7 @@
 
     .unit .bar {
         display: block;
-        /* background-color: #EE880088; */
+        margin-top: 0.5em;
         background-color: #CCC;
         height: 4px;
     }
@@ -104,22 +106,28 @@
     <div class="upstream-neurons">
       <h4> <%= fv_layer %> </h4>
         <% for (const [factor, hilo] of [[0, "hi"], [1, "lo"]]) {%>
+        <% localUnits = units[fv_layer][factor].reverse() %>
         <div class="row">
-            <div class="unit factor">
-                <img class="fv full" src="<%= `diagrams/2.1-upstream-nmf/${fv_layer}-${hilo}.png` %>" />
-                <span class="figcaption"><%= factor == 0 ? "HF" : "LF" %>-factor</span>
-            </div>
+            <img class="unit factor fv full" src="<%= `diagrams/2.1-upstream-nmf/${fv_layer}-${hilo}.png` %>" />
             <span class="annotation equal-sign">=</span>
-            <% for (const unit of units[fv_layer][factor].reverse()) {%>
+            <% for (const unit of localUnits) {%>
             <div class="unit">
                 <img class="fv full"
                     src="<%= `diagrams/2.2-upstream-neurons/layer_name=${fv_layer}-component=${factor}-channel_index=${unit.index}.png` %>" />
-                <div class="bar" style="width: <%= (unit.coeff*100).toFixed(3) %>%"></div>
-                <span class="magnitude figcaption"><%= unit.coeff.toFixed(2).toString().slice(1) %></span>
             </div>
             <span class="annotation">+</span>
             <% } %>
             <span class="annotation">…</span>
+
+            <span class="figcaption"><%= factor == 0 ? "HF" : "LF" %>-factor</span>
+            <span></span>
+            <% for (const unit of localUnits) {%>
+                <div class="unit">
+                    <!-- <div class="bar" style="width: <%= (unit.coeff*100).toFixed(3) %>%"></div> -->
+                    <span class="magnitude figcaption"> × <%= unit.coeff.toFixed(2).toString() %></span>
+                </div>
+                <span></span>
+            <% } %>
         </div>
         <% } %>
     </div>
