--- a/src/diagrams/upstream-nmf.ejs
+++ b/src/diagrams/upstream-nmf.ejs
@@ -126,8 +126,7 @@
         <p>Their spatial arrangement is very clear, with LF factors <span class="legend-label support">activating
                 areas</span> in which high-low frequency detectors expect low frequencies, and <span
                 class="legend-label inhibit">inhibiting areas</span> in which they expect high frequencies. The two factors
-            are very close to symmetric. Weight magnitudes normalized between -1 <img class="color-legend"
-                src="diagrams/2.1-upstream-nmf/pn-legend.png" /> and 1.</p>
+            are very close to symmetric. Weight magnitudes normalized between -1 <span class="color-legend pn"></span> and 1.</p>
     </figcaption>
 </figure>
 </d-figure>
