--- a/src/index.ejs
+++ b/src/index.ejs
@@ -299,28 +299,17 @@
         connections. A simple approach that we take is to linearize the model by removing the non-linearities. While
         this is not a great approximation of the model's behavior, it does give a reasonable intuition for
         counterfactual influence: had the neurons in the intermediate layer fired, how it would have affected neurons in
-        the downstream layers. We treat positive and negative influences separately.</d-footnote> between lower layers and the high-low frequency detectors is one way that we can check whether these two clusters are meaningful and investigate their significance. Performing a non-negative matrix factorization (NMF) to separate the connections into two factors gives us two vectors over neurons:</p>
-
+        the downstream layers. We treat positive and negative influences separately.</d-footnote> between lower layers and the high-low frequency detectors is one way that we can check whether these two clusters are meaningful and investigate their significance. Performing a non-negative matrix factorization (NMF) to separate the connections into two factors gives us two vectors over neurons.</p>
+    <p>Those vectors, in turn, can themselves be fed into feature visualization. Strikingly, the feature visualizations for
+      each factor confirm the first half of Hypothesis 1: one clearly displays a generic high-frequency image, whereas the other does the same with a low-frequency image. We'll call these the <em>HF-factor</em> and the <em>LF-factor</em>:</p>
 
     <d-figure id="figure-6">
       <%= require('./diagrams/upstream-neurons.ejs')() %>
     </d-figure>
 
-    <p>Those vectors, in turn, can themselves be fed into feature visualization! Strikingly, the feature visualizations for each factor confirm the first half of Hypothesis 1: one clearly displays a generic high-frequency image, whereas the other does the same with a low-frequency image. We'll call these the <i>HF-factor</i> and the <i>LF-factor</i>.</p>
-
     <p>How can we be more sure that we are interpreting these clusters right? One thing we can do is to create synthetic stimuli again, but targeted at those two NMF factors. This time, we construct a grid that varies both frequency and angle of orientation.</p>
 
-    <d-figure id="figure-7" style="grid-column-start: page-start; grid-column-end: page-end;">
-      <figure>
-        <img src="diagrams/hf-lf-stimuli.svg"/>
-      <figcaption>
-          <p>
-            <a href="#figure-7" class="figure-number">7</a>:
-            Responses to a grid of synthetic stimuli varying frequency and angle of orientation, against HF-factor and LF-factor from <code>conv2d2</code>. Orientation ranges from 0 to π/4. Wavelength as a proportion of the full input image ranges from 1:1 to 1:10. Activation values are normalized across all units shown, ranging from 0 to 1. <span class="viridis color-legend" style="display: inline; margin-left: 5px; padding-right: 64px;" />
-          </p>
-      </figcaption>
-      </figure>
-    </d-figure>
+    <d-figure id="figure-7"><figure></figure></d-figure>
 
     <p>Unlike last time, these activations now mostly ignore the image's orientation, but are sensitive to its frequency. We can average these results over all orientations in order to produce a simple tuning curve of how each factor responds to frequency. As predicted, the HF-factor responds to high frequency and the LF-factor responds to low frequency.</p>
 
